# lob_simulator

./: .gitignore  README.md  pyproject.toml
docs/: steps.md
src/: alt_order_book.py  intensity_functions.py  order_book.py  orders.py  queue_reactive_model.py  simulator.py
